--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,10 +3,11 @@
   padding: 0;
 }
 
+html,
 body {
   width: 100%;
   display: inline-block;
-  height: 10000px;
+  overflow-x: hidden;
 }
 
 /* NAVIGATION BAR */
@@ -121,8 +122,13 @@ body {
   margin-top: 6rem;
 }
 
+#content-left {
+  max-width: 40%;
+}
+
 #welcome-pic {
-  width: 650px;
+  width: 600px;
+  transition: all 0.5s ease;
 }
 
 #content-left-welcome {
