--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,3 +1,13 @@
+@media screen and (max-width: 1200px) {
+  /* WELCOME SECTION */
+  #content-left {
+    max-width: 55%;
+  }
+  #welcome-pic {
+    width: 100%;
+  }
+}
+
 @media screen and (max-width: 960px) {
   /* NAV BAR AND HEADER */
   #nav {
@@ -39,8 +49,31 @@
     height: 400px;
   }
   /* WELCOME SECTION */
+  #content-left {
+    max-width: 60%;
+  }
   #welcome-pic {
     width: 300px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  /* WELCOME SECTION */
+  #welcome {
+    flex-direction: column;
+    width: 100%;
+  }
+  #content-left {
+    max-width: 90%;
+    text-align: center;
+  }
+  #welcome-pic {
+    width: 100%;
+  }
+  .content-left-des,
+  #content-left-title,
+  #content-left-welcome {
+    width: 100%;
   }
 }
 
@@ -49,9 +82,5 @@
   .header-logo {
     width: 300px;
     height: 300px;
-  }
-  /* WELCOME SECTION */
-  #welcome {
-    flex-direction: column;
   }
 }
