--- a/styles/styles.css
+++ b/styles/styles.css
@@ -163,3 +163,32 @@ body {
   cursor: pointer;
   opacity: 0.8;
 }
+
+/* AGENCY */
+
+#agency {
+  margin-top: 6rem;
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: repeat(4, 1fr);
+  overflow: hidden;
+  min-height: 0;
+  min-width: 0;
+  transition: all 1s ease;
+}
+
+.agency-items {
+  overflow: hidden;
+}
+
+.agency-items > img {
+  width: 100%;
+  height: 100%;
+  transition: all 0.5s ease;
+}
+
+.agency-items > img:hover {
+  cursor: zoom-in;
+  transform: scale(1.2);
+  opacity: 0.8;
+}
