--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,14 +101,6 @@ body {
   transition: all 1s ease;
 }
 
-/* CONTENT WRAPPER */
-#content {
-  display: flex;
-  width: 80%;
-  max-width: 1190px;
-  margin: 0 auto;
-}
-
 /* WELCOME SECTION */
 
 #welcome {
@@ -164,22 +156,7 @@ body {
   opacity: 0.8;
 }
 
-/* AGENCY */
-
-#agency {
-  margin-top: 6rem;
-  display: grid;
-  gap: 0.5rem;
-  grid-template-columns: repeat(4, 1fr);
-  overflow: hidden;
-  min-height: 0;
-  min-width: 0;
-  transition: all 1s ease;
-}
-
-.agency-items {
-  overflow: hidden;
-}
+/* IMAGE SECTION */
 
 .agency-items > img {
   width: 100%;
@@ -191,4 +168,21 @@ body {
   cursor: zoom-in;
   transform: scale(1.2);
   opacity: 0.8;
+}
+
+/* SERVICES */
+
+.services {
+  padding-bottom: 6rem;
+}
+
+.agency-items > .dishes {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-top: 0.5rem;
+}
+
+.agency-items > .dishes-description {
+  margin-top: 0.5rem;
+  font-weight: 300;
 }
