--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,15 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html,
-body {
-  width: 100%;
-  display: inline-block;
-  overflow-x: hidden;
-}
-
 /* NAVIGATION BAR */
 
 #nav {
@@ -19,9 +7,6 @@ body {
   right: 0;
   background-color: transparent;
   padding: 2rem;
-  /* display: flex;
-  align-items: center;
-  justify-content: space-between; */
   z-index: 1;
   transition: all 0.5s ease;
 }
@@ -316,4 +301,81 @@ body {
 .recommended {
   background-color: #242526;
   color: #fff;
+}
+
+.carousel {
+  margin-top: 3rem;
+}
+
+.slider-item {
+  height: 30rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.slider-item:hover {
+  cursor: e-resize;
+}
+
+.slider-left {
+  background-color: #fff;
+  color: rgb(39, 39, 39);
+  padding: 4rem;
+  text-align: left;
+  user-select: none;
+}
+
+.slider-left-title {
+  font-size: 1.3rem;
+  color: #d0ae5e;
+  text-transform: capitalize;
+  font-weight: 600;
+}
+
+.slider-left-des {
+  margin-top: 0.2rem;
+}
+
+.slider-left-des,
+.slider-left-content {
+  font-size: 0.9rem;
+}
+
+.slider-left-content {
+  margin-top: 1.5rem;
+}
+
+.slider-left-signature {
+  font-family: 'great vibes';
+  text-transform: capitalize;
+  font-size: 2rem;
+  color: #d0ae5e;
+  margin-top: 1rem;
+}
+
+.slider-right {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.prev-btn,
+.next-btn {
+  padding: 0.2rem;
+  text-align: center;
+  display: inline-flex;
+  border-radius: 0.4rem;
+  border: 1px solid #fff;
+  margin: 0 0.2rem;
+  font-size: 0.8rem;
+  margin-top: 0.5rem;
+  align-content: center;
+  justify-content: center;
+  opacity: 0.2;
+}
+
+.prev-btn:hover,
+.next-btn:hover {
+  cursor: pointer;
+  opacity: 0.5;
 }
