--- a/styles/styles.css
+++ b/styles/styles.css
@@ -379,3 +379,65 @@
   cursor: pointer;
   opacity: 0.5;
 }
+
+/* BLOGS */
+
+.blog-list {
+  color: #fff;
+}
+
+.blog-item {
+  background-color: #242526;
+}
+
+.blog-item:hover img {
+  transform: scale(1.2);
+  opacity: 0.8;
+}
+
+.blog-item-head {
+  overflow: hidden;
+}
+
+.blog-item-head > img {
+  transition: all 0.5s ease;
+  width: 100%;
+}
+
+.blog-item-head > img:hover {
+  cursor: pointer;
+}
+
+.blog-item-content {
+  padding: 1.5rem;
+}
+
+.blog-content-address {
+  background-color: #d0ae5e;
+  width: 100%;
+  padding: 0.5rem 0;
+  border: 0;
+  font-size: 0.7rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.blog-content-address:hover {
+  cursor: pointer;
+  background-color: #cc9e31;
+}
+
+.blog-content-dish {
+  margin-top: 0.5rem;
+  text-transform: uppercase;
+  font-size: 0.9rem;
+  font-weight: 600;
+}
+
+.blog-content-des {
+  font-size: 0.7rem;
+  margin-top: 0.5rem;
+  opacity: 0.5;
+}
