contact section, adjust common styles

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -60,6 +60,10 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
   }
+  /* CONTACT */
+  .contact-items {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -119,6 +123,10 @@
   }
   .slider-left {
     padding: 2rem;
+  }
+  /* CONTACT */
+  .contact-items {
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
