--- a/styles/styles.css
+++ b/styles/styles.css
@@ -162,7 +162,7 @@
 }
 
 .agency-items > .dishes {
-  font-weight: 700;
+  font-weight: 600;
   text-transform: uppercase;
   margin-top: 0.5rem;
 }
@@ -440,4 +440,40 @@
   font-size: 0.7rem;
   margin-top: 0.5rem;
   opacity: 0.5;
+}
+
+/* CONTACT */
+
+.contact {
+  background-color: #fbf9f3;
+}
+
+.contact-items {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+  margin-top: 3rem;
+}
+
+.contact-item {
+  background-color: #fff;
+  padding: 3rem 2rem;
+  border: 1px solid rgb(255, 230, 230);
+}
+
+.contact-item > i {
+  font-size: 2.5rem;
+  color: #d0ae5e;
+}
+
+.contact-item-title {
+  text-transform: capitalize;
+  font-weight: 500;
+  margin-top: 1rem;
+}
+
+.contact-item-des {
+  margin-top: 1rem;
+  font-size: 0.8rem;
+  font-weight: 400;
 }
