--- a/styles/styles.css
+++ b/styles/styles.css
@@ -477,3 +477,62 @@
   font-size: 0.8rem;
   font-weight: 400;
 }
+
+/* BOOKING */
+
+.booking {
+  color: #fff;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url('../assets/img/hero-bg3.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.submit-form {
+  margin: 0 auto;
+  align-items: center;
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  width: 80%;
+  row-gap: 1rem;
+}
+
+.submit-form input,
+.submit-form > textarea {
+  width: -webkit-fill-available;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.2rem;
+  font-weight: 500;
+  font-family: montserrat, monospace;
+}
+
+.submit-form > textarea {
+  resize: vertical;
+  height: 10rem;
+}
+
+.submit-form input:focus,
+.submit-form > textarea:focus {
+  outline: none;
+}
+
+.submit-form button {
+  margin-top: 0.5rem;
+  padding: 0.8rem 2.2rem;
+  border: none;
+  border-radius: 0.3rem;
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: #d0ae5e;
+  color: #fff;
+}
+
+.submit-form button:hover {
+  background-color: #cc9e31;
+  cursor: pointer;
+}
