--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -137,6 +137,16 @@
     padding-bottom: 1rem;
     width: 100%;
   }
+  /* FOOTER */
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    row-gap: 1.2rem;
+  }
+  .footer-right {
+    width: 60%;
+  }
 }
 
 @media screen and (max-width: 390px) {
