--- a/styles/styles.css
+++ b/styles/styles.css
@@ -536,3 +536,35 @@
   background-color: #cc9e31;
   cursor: pointer;
 }
+
+/* FOOTER */
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 3rem 0;
+  font-size: 0.8rem;
+}
+
+.footer-left {
+  opacity: 0.8;
+}
+
+.footer-right {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 25%;
+}
+
+.footer-right i {
+  font-size: 1.2rem;
+  opacity: 0.5;
+  transition: all 0.5s ease;
+}
+
+.footer-right i:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
