--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,7 +8,7 @@
   background-color: transparent;
   padding: 2rem;
   z-index: 1;
-  transition: all 0.5s ease;
+  transition: all 0.5s ease-in;
 }
 
 .nav-content {
@@ -153,6 +153,36 @@
   cursor: zoom-in;
   transform: scale(1.2);
   opacity: 0.8;
+}
+
+.preview-window {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: #fff;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 3rem;
+}
+
+.close-window-btn {
+  position: fixed;
+  top: 2rem;
+  right: 2rem;
+}
+
+.close-window-btn:hover {
+  cursor: pointer;
+}
+
+.preview-window > img {
+  width: 60%;
 }
 
 /* SERVICES */
