--- a/styles/common.css
+++ b/styles/common.css
@@ -12,6 +12,7 @@ body {
   display: inline-block;
   overflow-x: hidden;
   font-family: montserrat, monospace;
+  scroll-behavior: smooth;
 }
 
 /* CONTENT WRAPPER */
