--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -29,9 +29,15 @@
   }
   #reservation {
     padding: 0.5rem 1.2rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
   }
   #links-items li:not(:first-child) {
     border-top: 1px solid rgb(82, 82, 82);
+  }
+  .links-items-btn a {
+    width: 100%;
   }
   #nav-icon {
     display: inline-block;
