fix navbar bugs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,7 +101,7 @@
   margin: 0 auto;
   justify-content: space-between;
   max-width: 1190px;
-  margin-top: 3rem;
+  padding-top: 6rem;
 }
 
 #content-left {
