form + recommended update

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -393,25 +393,28 @@
   height: 100%;
 }
 
+.controls-container {
+  margin-top: 2rem;
+}
+
 .prev-btn,
 .next-btn {
-  padding: 0.2rem;
+  padding: 0.5rem 1.2rem;
+  color: #fff;
   text-align: center;
   display: inline-flex;
   border-radius: 0.4rem;
-  border: 1px solid #fff;
-  margin: 0 0.2rem;
-  font-size: 0.8rem;
-  margin-top: 0.5rem;
+  border: none;
+  font-size: 2rem;
   align-content: center;
-  justify-content: center;
-  opacity: 0.2;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0.5;
 }
 
 .prev-btn:hover,
 .next-btn:hover {
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 0.8;
 }
 
 /* BLOGS */
